fixed meta elements icon wrap

--- a/src/templates/items-list/items-style/emerge/style.scss
+++ b/src/templates/items-list/items-style/emerge/style.scss
@@ -111,10 +111,6 @@
             margin-left: var(--vp-items-style-emerge--meta-inline__gap);
         }
     }
-    .vp-portfolio__item-meta-part {
-        display: inline-flex;
-        align-items: center;
-    }
     .vp-portfolio__item-meta-part-icon {
         margin-right: var(--vp-items-style-emerge--meta-part-icon__offset);
     }
