--- a/src/templates/items-list/items-style/style.scss
+++ b/src/templates/items-list/items-style/style.scss
@@ -95,10 +95,6 @@
             margin-left: var(--vp-items-style-default--meta-inline__gap);
         }
     }
-    .vp-portfolio__item-meta-part {
-        display: inline-flex;
-        align-items: center;
-    }
     .vp-portfolio__item-meta-part-icon {
         margin-right: var(--vp-items-style-default--meta-part-icon__offset);
     }
